<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AltaEventos">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/lb_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lb_descripcion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lb_direccion"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lb_precio"
        android:inputType="textPersonName|numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/etDireccion"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lb_fecha"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/etPrecio"
        tools:layout_editor_absoluteX="15dp" />

    <EditText
        android:id="@+id/etAforo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lb_aforo"
        android:inputType="textPersonName|number"
        app:layout_constraintTop_toBottomOf="@+id/etFecha"
        tools:layout_editor_absoluteX="14dp" />

    <ImageButton
        android:id="@+id/ibImagen"
        android:layout_width="112dp"
        android:layout_height="114dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="208dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/etAforo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lb_alta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btCancelar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lb_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>